--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 e.src = 'https://www.google-analytics.com/analytics.js';
                 r.parentNode.insertBefore(e, r);
             })(window, document, 'script', 'ga');
-            ga('create', 'G-XKVX4FB7S0');
+            ga('create', 'G-C94YGHJ3EP');
             ga('send', 'pageview');
         </script>
     </body>
